# tct-bundle-cage

./: .gitignore  NOTE.md  README.md  aprove-jbc2inttrs.sh  install.sh  pull.sh  stack.dev.yaml  tct-bundle-cage.cabal  tct-bundle-inttrs.cabal  tct-bundle-jbc.cabal
app/: IntTrs.hs  Its.hs  Trs.hs
